tests/NormalTests/paczka1/small_fuzzy/20753471.err
Error in line 6: S550 A497 64,6
Error in line 8: S550 S550 66,2
